--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,16 @@
 {
-	"env": {
-		"es6": true,
-		"node": true,
-		"jest": true
-	},
-	"extends": "airbnb-base",
-	"rules": {
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-	},
-	"plugins": ["react", "import"]
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "extends": "airbnb",
+  "parser": "babel-eslint",
+  "plugins": ["react", "import"],
+  "rules": {
+    "no-tabs": 0,
+    "react/jsx-uses-vars": 1,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+  }
 }
