--- a/package.json
+++ b/package.json
@@ -26,15 +26,6 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint-debug": "eslint --debug ./src",
-    "lint-fix": "eslint --fix ./src"
-  },
-  "devDependencies": {
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0"
+    "eject": "react-scripts eject"
   }
 }
