--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "eslint": "^4.19.1",
     "faker": "^4.1.0",
     "lodash": "^4.17.4",
     "node-sass-chokidar": "^0.0.3",
